# RED4ext.SDK

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  clang-format.yml
cmake/: RED4ext.pc.in  RED4extConfig.cmake.in  Version.hpp.in  pch.hpp.in
examples/: CMakeLists.txt
examples/accessing_properties/: Main.cpp  premake5.lua
examples/execute_functions/: Main.cpp  premake5.lua
examples/function_registration/: Main.cpp  premake5.lua
examples/native_class_redscript/: Main.cpp  MyCustomClass.reds  premake5.lua
examples/native_globals_redscript/: CustomGlobals.redscript  Main.cpp  premake5.lua
include/RED4ext/: Addresses.hpp  Api.hpp  Buffer-inl.hpp  Buffer.hpp  CName-impl.hpp  CName-inl.hpp  CName.hpp  CNamePool-inl.hpp  CNamePool.hpp  CString-inl.hpp  CString.hpp  CWideString.hpp  Callback.hpp  CommandLine-inl.hpp  CommandLine.hpp  Common.hpp  DynArray.hpp  DynamicBuffer.hpp  Exception.hpp  FileStream.hpp  GameApplication.hpp  GameEngine-impl.hpp  GameEngine-inl.hpp  GameEngine.hpp  GameStates.hpp  Handle.hpp  HashMap.hpp  IMemoryAllocator.hpp  ISerializable-inl.hpp  ISerializable.hpp  InstanceType.hpp  JobQueue-inl.hpp  JobQueue.hpp  LaunchParameters-inl.hpp  LaunchParameters.hpp  Map.hpp  MemoryAllocators-inl.hpp  MemoryAllocators.hpp  Meta.hpp  Mutex-inl.hpp  (+56 more)
include/RED4ext/Api/: EMainReason.hpp  FileVer.hpp  GameState.hpp  IRED4ext.hpp  PluginHandle.hpp  PluginInfo.hpp  RED4ext.hpp  Runtime.hpp  Sdk.hpp  SemVer.hpp  Version.hpp  VersionInfo.hpp
include/RED4ext/Api/v0/: FileVer-inl.hpp  FileVer.hpp  GameState.hpp  GameStates.hpp  Hooking.hpp  IHooking.hpp  IRED4ext.hpp  ITrampoline.hpp  Logger.hpp  PluginInfo.hpp  RED4ext.hpp  Runtime.hpp  Scripts.hpp  Sdk.hpp  SemVer-inl.hpp  SemVer.hpp  Version.hpp  VersionInfo-inl.hpp  VersionInfo.hpp
include/RED4ext/Api/v1/: IHooking.hpp  IRED4ext.hpp  ITrampoline.hpp  PluginInfo.hpp  Runtime.hpp  Sdk.hpp  VersionInfo-inl.hpp  VersionInfo.hpp
include/RED4ext/Containers/: DynArray.hpp
include/RED4ext/Detail/: AddressHashes.hpp  Callback.hpp  Function.hpp  Memory.hpp
include/RED4ext/Detail/Containers/: DynArray.hpp  DynArrayIterator.hpp
include/RED4ext/Dump/: Reflection-inl.hpp  Reflection.hpp
include/RED4ext/Hashing/: CRC.hpp  FNV1a.hpp  Murmur3-inl.hpp  Murmur3.hpp
include/RED4ext/IO/: BaseStream-inl.hpp  BaseStream.hpp  MemoryStream-inl.hpp  MemoryStream.hpp
include/RED4ext/Iterators/: DynArray.hpp  DynArrayIters.hpp  HashMapIters.hpp  MapIters.hpp
include/RED4ext/Memory/: Allocator.hpp  Allocators.hpp  Pool.hpp  Pools.hpp  SharedPtr.hpp  Utils.hpp  Vault-inl.hpp  Vault.hpp
include/RED4ext/Scripting/: CProperty-inl.hpp  CProperty.hpp  Functions-impl.hpp  Functions-inl.hpp  Functions.hpp  IScriptable-inl.hpp  IScriptable.hpp  Meta.hpp  Natives.cpp  OpcodeHandlers-inl.hpp  OpcodeHandlers.hpp  Script-inl.hpp  Script.hpp  ScriptReport-inl.hpp  ScriptReport.hpp  Stack-impl.hpp  Stack-inl.hpp  Stack.hpp  Utils-impl.hpp  Utils-inl.hpp  Utils.hpp
include/RED4ext/Scripting/Natives/: AnimAnimatedObject.hpp  AnimBufferState.hpp  AnimKeyFrames.hpp  AnimMetaRig.hpp  AnimRig.hpp  AnimSet.hpp  AnimationBufferCompressed.hpp  CMaterialInstance.hpp  CMeshMaterialEntry.hpp  CResource.hpp  CharacterCustomization-inl.hpp  CharacterCustomization.hpp  GameTime-inl.hpp  GameTime.hpp  IMaterial.hpp  IUpdatableSystem-inl.hpp  IUpdatableSystem.hpp  Rig.hpp  ScriptGameInstance-inl.hpp  ScriptGameInstance.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  WorldPosition.hpp  animAnimSet.hpp  animAnimatedObject.hpp  animAnimationBufferCompressed.hpp  animAnimationSystem.hpp  animIAnimationBuffer-inl.hpp  animIAnimationBuffer.hpp  animKeyFrames.hpp  animMetaRig.hpp  animRig.hpp  appearanceAppearanceDefinition.hpp  entAnimationControllerComponent.hpp  entEntity.hpp  entEntityID.hpp  entEntityTemplate.hpp  entIComponent.hpp  entIPlacedComponent.hpp  (+40 more)
include/RED4ext/Types/: CharacterCustomization-inl.hpp  CharacterCustomization.hpp  CharacterCustomizationOptionImpl.hpp  GameTime-inl.hpp  GameTime.hpp  Handle.hpp  InstanceType.hpp  SharedMutex-inl.hpp  SharedMutex.hpp  SimpleTypes-inl.hpp  SimpleTypes.hpp  SpinLock-inl.hpp  SpinLock.hpp  TweakDB-inl.hpp  TweakDB.hpp
premake/: premake5.lua
premake/extensions/: red4ext.lua
premake/extensions/red4ext/: paths.lua  version.lua
scripts/: find_patterns.py  patterns.py
src/: Buffer.cpp  CName.cpp  CNamePool.cpp  CString.cpp  CommandLine.cpp  GameEngine.cpp  Generated.cpp  ISerializable.cpp  JobQueue.cpp  LaunchParameters.cpp  MemoryAllocators.cpp  Mutex.cpp  NativeTypes.cpp  Package.cpp  RED4ext.cpp  RTTISystem.cpp  RTTITypes.cpp  Relocation.cpp  ResourceDepot.cpp  ResourceLoader.cpp  ResourceReference.cpp  SharedMutex.cpp  SharedSpinLock.cpp  SpinLock.cpp  StringView.cpp  SystemUpdate.cpp  TLS.cpp  TweakDB.cpp
src/Api/v0/: FileVer.cpp  SemVer.cpp  VersionInfo.cpp
src/Api/v1/: VersionInfo.cpp
src/Dump/: Reflection.cpp
src/Hashing/: Murmur3.cpp
src/IO/: BaseStream.cpp  MemoryStream.cpp
src/Memory/: Vault.cpp
src/Scripting/: CProperty.cpp  Functions.cpp  IScriptable.cpp  Natives.cpp  OpcodeHandlers.cpp  Script.cpp  ScriptReport.cpp  Stack.cpp  Utils.cpp
src/Scripting/Natives/: CharacterCustomization.cpp  GameTime.cpp  IUpdatableSystem.cpp  ScriptGameInstance.cpp  animIAnimationBuffer.cpp  gameIAttachmentSlotsListener.cpp  gameIGameSystem.cpp  gamePersistentState.cpp  redTagList.cpp
src/Types/: CharacterCustomization.cpp  GameTime.cpp  SharedMutex.cpp  SimpleTypes.cpp  SpinLock.cpp  TweakDB.cpp
